# FKW

./: CMakeLists.txt  Readme.md
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
test/: CMakeLists.txt  InvertedIndex-test.cpp  SearchServer-test.cpp
